fix spacing

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body {
 }
 
 .header {
-  margin-bottom: 6.5rem;
+  margin-bottom: 5.5rem;
 }
 
 .main {
